WebApi Namespace and Generator completed.

--- a/CSharpGenerator/CSharp Generator.csproj
+++ b/CSharpGenerator/CSharp Generator.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Globals.cs" />
     <Compile Include="Wcf\Bindings.cs" />
     <Compile Include="WebApi\Data.cs" />
+    <Compile Include="WebApi\Generator.cs" />
+    <Compile Include="WebApi\Namespace.cs" />
     <Compile Include="WebApi\Service.cs" />
     <Compile Include="Wcf\Data.cs" />
     <Compile Include="DataType.cs" />
