Began Data Projects. Added Integer/Enum casts to EF support. Fixed incorrect generation of Web API configuration in Client and non-self-hosted scenarios. Fixed bug in HTTP Client code generation.

--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -103,6 +103,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Data.cs" />
+    <Compile Include="Data\Namespace.cs" />
+    <Compile Include="Data\Project.cs" />
     <Compile Include="Namespace.cs" />
     <Compile Include="Wcf\Binding.cs" />
     <Compile Include="CompilerMessages.cs" />
