Added models Project, Namespace, and Enums.

--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -44,7 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProjectBase.cs" />
+    <Compile Include="Enum.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
