--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enum.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
