--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enum.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
