--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -39,6 +39,10 @@
     <StartupObject>RestForge.Designer.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EllipticBit.Controls.WPF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\EllipticBit.Controls\Build\EllipticBit.Controls.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -59,6 +63,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Icons\General.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Main.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -100,6 +108,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Generators\Generators.csproj">
+      <Project>{f12b11af-6804-43b3-8cc8-bea0cf0acc8b}</Project>
+      <Name>Generators</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Modules\Modules.csproj">
+      <Project>{555ef39e-2351-4a51-9ee2-2899891a93bf}</Project>
+      <Name>Modules</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Projects\Projects.csproj">
       <Project>{9e1b9bc5-0c2d-46db-973f-2ceaf1709fd3}</Project>
       <Name>Projects</Name>
@@ -113,6 +129,7 @@
       <Name>Styles</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
