--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildMessage.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Project.cs" />
