JSON.NET constructors for Solutions. Improved solution loading to account for solution versions.

--- a/Modules/Modules.csproj
+++ b/Modules/Modules.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="Document.cs" />
     <Compile Include="Loader.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="ModuleBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
