Added Solution XAML models. Added Solution User Profiles for user specific settings.

--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -63,6 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\ProjectXaml.cs" />
+    <Compile Include="Model\SolutionFolderXaml.cs" />
+    <Compile Include="Model\SolutionXaml.cs" />
     <Page Include="Icons\General.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
